<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.16</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>gov.epa.ccte.api</groupId>
	<artifactId>chemical</artifactId>
	<version>1.2.0</version>
	<name>chemical</name>
	<description>project for chemicals</description>
	<properties>
		<java.version>17</java.version>
		<testcontainers.version>1.17.6</testcontainers.version>
		<mapstruct.version>1.5.3.Final</mapstruct.version>
		<sentry.version>8.18.0</sentry.version>
        
	</properties>
	
        <distributionManagement>
        	<repository>
            		<id>github</id>
            		<name>GitHub OWNER Apache Maven Packages</name>
            		<url>https://maven.pkg.github.com/USEPA/ccte-api-chemical</url>
        	</repository>
    	</distributionManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<!-- Swagger/OpenAPI doc -->
		<dependency>
      		<groupId>org.springdoc</groupId>
      		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      		<version>2.8.8</version>
   		</dependency>
		<!-- https://mvnrepository.com/artifact/com.epam.indigo/indigo -->
		<dependency>
			<groupId>com.epam.indigo</groupId>
			<artifactId>indigo</artifactId>
			<version>1.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.epam.indigo/indigo-renderer -->
		<dependency>
			<groupId>com.epam.indigo</groupId>
			<artifactId>indigo-renderer</artifactId>
			<version>1.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.epam.indigo/indigo-inchi -->
		<dependency>
			<groupId>com.epam.indigo</groupId>
			<artifactId>indigo-inchi</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.5.3.Final</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-hibernate6</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/uk.ac.cam.ch.opsin/opsin-core -->
		<dependency>
			<groupId>uk.ac.cam.ch.opsin</groupId>
			<artifactId>opsin-core</artifactId>
			<version>2.8.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/uk.ac.cam.ch.opsin/opsin-inchi -->
		<dependency>
			<groupId>uk.ac.cam.ch.opsin</groupId>
			<artifactId>opsin-inchi</artifactId>
			<version>2.8.0</version>
		</dependency>
		
		<dependency>
    		<groupId>io.sentry</groupId>
    		<artifactId>sentry-spring-boot-starter-jakarta</artifactId>
    	<version>${sentry.version}</version>
		</dependency>
		
<!--		<dependency>-->
<!--			<groupId>gov.epa.ccte.api</groupId>-->
<!--			<artifactId>ccte-api-core-spring-boot-starter</artifactId>-->
<!--			<version>1.0.0</version>-->
<!--		</dependency>-->
	</dependencies>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source> <!-- or higher, depending on your project -->
					<target>${java.version}</target> <!-- or higher, depending on your project -->
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${project.parent.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
						<arg>-Amapstruct.defaultComponentModel=spring</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>